<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/navHome"
    android:id="@+id/mobile_navigation">

    <fragment
        android:id="@+id/navHome"
        android:name="br.com.raulreis.jokenorris.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navHome_to_navJoke"
            app:destination="@id/navJoke" />
    </fragment>

    <fragment
        android:id="@+id/navDay"
        android:name="br.com.raulreis.jokenorris.JokeDayFragment"
        android:label="@string/menu_joke_day"
        tools:layout="@layout/fragment_joke_day" />

    <fragment
        android:id="@+id/navAbout"
        android:name="br.com.raulreis.jokenorris.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navJoke"
        android:name="br.com.raulreis.jokenorris.view.JokeFragment"
        tools:layout="@layout/fragment_joke" />


</navigation>